--- a/CoPeCo/app/src/main/res/layout/activity_chat.xml
+++ b/CoPeCo/app/src/main/res/layout/activity_chat.xml
@@ -7,7 +7,52 @@
 		android:layout_height = "match_parent"
 		tools:context = ".activities.Chat">
 
-	<include layout="@layout/content_main"/>
+	<LinearLayout
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			android:orientation="vertical"
+			android:paddingBottom="80dp"
+			>
+
+
+
+
+	<include layout="@layout/content_main" android:id="@+id/recycler_view"/>
+
+	</LinearLayout>
+
+
+	<AutoCompleteTextView
+				android:id = "@+id/send_message_text"
+				android:layout_width = "0dp"
+				android:layout_height = "wrap_content"
+				android:layout_marginTop="80dp"
+				app:layout_constraintWidth_percent="0.8"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintLeft_toLeftOf="parent"
+				android:layout_marginBottom="10dp"
+				app:layout_constraintVertical_weight="1"
+
+				/>
+
+		<com.google.android.material.floatingactionbutton.FloatingActionButton
+				android:id = "@+id/send_message_button"
+				android:layout_width = "wrap_content"
+				android:layout_height = "wrap_content"
+				android:layout_gravity = "bottom|end"
+				app:backgroundTint = "@color/colorPrimaryDark"
+
+
+				app:srcCompat = "@drawable/ic_send_24dp"
+				app:layout_constraintStart_toEndOf = "@+id/send_message_text"
+				app:layout_constraintBottom_toBottomOf = "@id/send_message_text"
+				app:layout_constraintEnd_toEndOf = "parent"
+
+				android:layout_marginStart = "0dp"
+				android:layout_alignStart = "@+id/send_message_text" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
