--- a/CoPeCo/app/src/main/res/layout/custom_messages_layout.xml
+++ b/CoPeCo/app/src/main/res/layout/custom_messages_layout.xml
@@ -7,7 +7,7 @@
 			android:id="@+id/message_profile_image"
 			android:layout_width = "50dp"
 			android:layout_height = "50dp"
-			android:layout_marginTop="10dp"
+			android:layout_margin="10dp"
 			android:src="@drawable/profile_image"
 			/>
 
